--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -16,6 +16,6 @@
     <color name="color_on_surface">#000000</color>
     <color name="color_on_error">#ffffff</color>
 
-    <color name="color_divider">#efefef</color>
+    <color name="color_divider">#B7CFE9</color>
 
 </resources>
