--- a/app/src/main/res/layout/item_home_banner.xml
+++ b/app/src/main/res/layout/item_home_banner.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            app:currentView="@{item.initRecycler}"
+            app:currentView="@{item.recyclerCommand}"
             app:itemBinding="@{item.itemBinding}"
             app:items="@{item.items}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
