--- a/app/src/main/res/layout/fragment_home_project.xml
+++ b/app/src/main/res/layout/fragment_home_project.xml
@@ -8,10 +8,27 @@
             type="com.zhuzichu.android.wan.ui.home.viewmodel.ViewModelHomeProject" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        app:onRefresh="@{viewModel.onRefreshConmmand}">
 
-    </LinearLayout>
+        <FrameLayout
+            android:id="@+id/refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.zhuzichu.android.widget.recycler.BottomRecyclerView
+                android:id="@+id/recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:itemBinding="@{viewModel.itemBinding}"
+                app:items="@{viewModel.items}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:onScrollBottom="@{viewModel.onBottomCommand}" />
+
+        </FrameLayout>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
