--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
+            app:fadeDuration="@{500}"
             app:layout_constraintDimensionRatio="h,1943:1080"
             app:layout_constraintTop_toTopOf="parent"
             app:url="@{item.imagePath}"
