--- a/app/src/main/res/layout/item_home_project.xml
+++ b/app/src/main/res/layout/item_home_project.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="item"
-            type="com.zhuzichu.android.wan.ui.home.viewmodel.ItemViewModelHomeArticle" />
+            type="com.zhuzichu.android.wan.ui.home.viewmodel.ItemViewModelHomeProject" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,48 +17,67 @@
         app:onClickCommand="@{item.onClickItem}">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:ellipsize="end"
-            android:gravity="start"
-            android:maxLines="2"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            app:htmlText="@{item.title}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="MultiSnapRecyclerViewMultiSnapRecyclerViewMultiSnapRecyclerViewMultiSnapRecyclerViewMultiSnapRecyclerView" />
-
-        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
             android:textAppearance="?attr/textAppearanceCaption"
             app:htmlText="@{item.user}"
-            app:layout_constraintStart_toStartOf="@id/title"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="分享人:zhuzichu520" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:textAppearance="?attr/textAppearanceCaption"
             app:htmlText="@{item.time}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/title"
-            app:layout_constraintTop_toBottomOf="@+id/share"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="时间:3小时前" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/pic"
+            android:layout_width="100dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:scaleType="centerCrop"
+            app:fadeDuration="@{500}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/share"
+            app:url="@{item.pic}"
+            tools:src="@mipmap/ic_launcher" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLines="2"
+            android:textAppearance="?attr/textAppearanceSubtitle2"
+            app:htmlText="@{item.title}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/pic"
+            app:layout_constraintTop_toBottomOf="@+id/share"
+            tools:text="MultiSnapRecyclerViewMultiSnapRecyclerViewMultiSnapRecyclerViewMultiSnapRecyclerViewMultiSnapRecyclerView" />
 
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:scaleType="center"
             android:src="@drawable/ic_star"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -66,16 +85,6 @@
             app:layout_constraintTop_toBottomOf="@+id/title"
             app:onClickCommand="@{item.onClickCollect}"
             app:srcColor="@{item.collectColor}" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_top"
-            app:visibility="@{item.topVisibility}"
-            tools:visibility="visible" />
 
         <View
             android:layout_width="match_parent"
