--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -9,5 +9,41 @@
     <fragment
         android:id="@+id/fragmentMain"
         android:name="com.zhuzichu.android.wan.ui.main.fragment.FragmentMain"
-        android:label="FragmentMain" />
+        android:label="FragmentMain"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_fragmentMain_to_fragmentSetting"
+            app:destination="@id/fragmentSetting" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentSetting"
+        android:name="com.zhuzichu.android.wan.ui.setting.main.fragment.FragmentSetting"
+        android:label="FragmentSetting"
+        tools:layout="@layout/fragment_setting" >
+        <action
+            android:id="@+id/action_fragmentSetting_to_fragmentTheme"
+            app:destination="@id/fragmentTheme" />
+        <action
+            android:id="@+id/action_fragmentSetting_to_fragmentLanguages"
+            app:destination="@id/fragmentLanguages" />
+        <action
+            android:id="@+id/action_fragmentSetting_to_fragmentAnimation"
+            app:destination="@id/fragmentAnimation" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentLanguages"
+        android:name="com.zhuzichu.android.wan.ui.setting.languages.fragment.FragmentLanguages"
+        android:label="FragmentLanguages"
+        tools:layout="@layout/fragment_languages" />
+    <fragment
+        android:id="@+id/fragmentTheme"
+        android:name="com.zhuzichu.android.wan.ui.setting.theme.fragment.FragmentTheme"
+        android:label="FragmentTheme"
+        tools:layout="@layout/fragment_theme" />
+    <fragment
+        android:id="@+id/fragmentAnimation"
+        android:name="com.zhuzichu.android.wan.ui.setting.animation.fragment.FragmentAnimation"
+        android:label="FragmentAnimation"
+        tools:layout="@layout/fragment_animation" />
+
 </navigation>
