--- a/shared/src/main/res/values/view-styles.xml
+++ b/shared/src/main/res/values/view-styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="window_fade">
+    <style name="WindowFade">
         <item name="android:windowEnterAnimation">@anim/fade_in</item>
         <item name="android:windowExitAnimation">@anim/fade_out</item>
     </style>
