--- a/app/src/main/res/drawable/ic_top.xml
+++ b/app/src/main/res/drawable/ic_top.xml
@@ -2,7 +2,8 @@
     android:width="200dp"
     android:height="200dp"
     android:viewportWidth="1024"
-    android:viewportHeight="1024">
+    android:viewportHeight="1024"
+    android:autoMirrored="true">
     <path
         android:fillColor="#88D83C3C"
         android:pathData="M432.3,315.98c-18.43,-19.26 -36.99,-30.3 -55.68,-33.11 -18.69,-2.81 -35.3,3.39 -49.82,18.62 -14.76,15.46 -20.89,33.37 -18.4,53.72 2.49,20.35 12.45,39.64 29.89,57.87 17.22,17.99 35.43,28.35 54.65,31.09 19.22,2.74 36.06,-3.47 50.51,-18.62 14.76,-15.46 21.01,-32.97 18.75,-52.53 -2.26,-19.56 -12.22,-38.57 -29.89,-57.04z" />
