--- a/app/src/main/res/layout/item_home_article.xml
+++ b/app/src/main/res/layout/item_home_article.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textAppearance="?attr/textAppearanceCaption"
-            app:htmlText="@{item.user}"
+            app:bindArticleUser="@{item.article}"
             app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title"
             tools:text="分享人:zhuzichu520" />
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:textAppearance="?attr/textAppearanceCaption"
-            app:htmlText="@{item.time}"
+            app:bindArticleTime="@{item.article}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintTop_toBottomOf="@+id/share"
