--- a/app/src/main/res/layout/item_home_project.xml
+++ b/app/src/main/res/layout/item_home_project.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:textAppearance="?attr/textAppearanceCaption"
-            app:htmlText="@{item.user}"
+            app:bindArticleUser="@{item.article}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="分享人:zhuzichu520" />
@@ -35,7 +35,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:textAppearance="?attr/textAppearanceCaption"
-            app:htmlText="@{item.time}"
+            app:bindArticleTime="@{item.article}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="时间:3小时前" />
