--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -10,16 +10,19 @@
         android:id="@+id/fragmentMain"
         android:name="com.zhuzichu.android.wan.ui.main.fragment.FragmentMain"
         android:label="FragmentMain"
-        tools:layout="@layout/fragment_main" >
+        tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_fragmentMain_to_fragmentSetting"
             app:destination="@id/fragmentSetting" />
+        <action
+            android:id="@+id/action_fragmentMain_to_fragmentSearch"
+            app:destination="@id/fragmentSearch" />
     </fragment>
     <fragment
         android:id="@+id/fragmentSetting"
         android:name="com.zhuzichu.android.wan.ui.setting.main.fragment.FragmentSetting"
         android:label="FragmentSetting"
-        tools:layout="@layout/fragment_setting" >
+        tools:layout="@layout/fragment_setting">
         <action
             android:id="@+id/action_fragmentSetting_to_fragmentTheme"
             app:destination="@id/fragmentTheme" />
@@ -45,5 +48,10 @@
         android:name="com.zhuzichu.android.wan.ui.setting.animation.fragment.FragmentAnimation"
         android:label="FragmentAnimation"
         tools:layout="@layout/fragment_animation" />
+    <fragment
+        android:id="@+id/fragmentSearch"
+        android:name="com.zhuzichu.android.wan.ui.search.fragment.FragmentSearch"
+        android:label="FragmentSearch"
+        tools:layout="@layout/fragment_search" />
 
 </navigation>
