--- a/app/src/main/res-opencv/layout/fragment_gray.xml
+++ b/app/src/main/res-opencv/layout/fragment_gray.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.zhuzichu.android.wan.ui.opencv.main.viewmodel.ViewModelOpencv" />
+            type="com.zhuzichu.android.wan.ui.opencv.main.viewmodel.ViewModelGray" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
