--- a/app/src/main/res-opencv/layout/item_opencv.xml
+++ b/app/src/main/res-opencv/layout/item_opencv.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="item"
-            type="com.zhuzichu.android.wan.ui.me.viewmodel.ItemViewModelDemo" />
+            type="com.zhuzichu.android.wan.ui.opencv.main.viewmodel.ItemViewModelOpencv" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
