--- a/app/src/main/res-jni/layout/fragment_jni.xml
+++ b/app/src/main/res-jni/layout/fragment_jni.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            app:diffConfig="@{viewModel.diff}"
             app:itemBinding="@{viewModel.itemBinding}"
             app:items="@{viewModel.items}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
