--- a/app/src/main/res-opencv/layout/fragment_blur.xml
+++ b/app/src/main/res-opencv/layout/fragment_blur.xml
@@ -12,20 +12,39 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:srcBitmap="@{viewModel.bitmap}" />
 
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/height"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:max="97"
+            android:progress="17"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:onSeekCommand="@{viewModel.onSeekHeightCommand}" />
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/width"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="97"
+            android:progress="17"
+            app:layout_constraintBottom_toTopOf="@+id/height"
+            app:onSeekCommand="@{viewModel.onSeekWidthCommand}" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/gray"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="15dp"
+            android:text="还原"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:onClickCommand="@{viewModel.onClickGray}" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:onClickCommand="@{viewModel.onClickReturn}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
