--- a/app/src/main/res-opencv/layout/fragment_canny.xml
+++ b/app/src/main/res-opencv/layout/fragment_canny.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.zhuzichu.android.wan.ui.opencv.main.viewmodel.ViewModelGray" />
+            type="com.zhuzichu.android.wan.ui.opencv.main.viewmodel.ViewModelCanny" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -18,14 +18,25 @@
             android:layout_height="match_parent"
             app:srcBitmap="@{viewModel.bitmap}" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="wrap_content"
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/max"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/opencv_gray"
+            android:layout_marginBottom="15dp"
+            android:max="60"
+            android:progress="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:onClickCommand="@{viewModel.onClickGray}" />
+            app:onSeekCommand="@{viewModel.onSeekMaxThresholdCommand}" />
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/min"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="60"
+            android:progress="1"
+            app:layout_constraintBottom_toTopOf="@+id/max"
+            app:onSeekCommand="@{viewModel.onSeekMinThresholdCommand}" />
 
         <Button
             android:layout_width="wrap_content"
