--- a/app/src/main/res/navigation/navigation_websocket.xml
+++ b/app/src/main/res/navigation/navigation_websocket.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation_websocket">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_websocket"
+    app:startDestination="@id/fragmentWebsocket">
+
+    <fragment
+        android:id="@+id/fragmentWebsocket"
+        android:name="com.zhuzichu.android.wan.ui.websocket.main.fragment.FragmentWebsocket"
+        android:label="FragmentWebsocket"
+        tools:layout="@layout/fragment_websocket" />
 
 </navigation>
