--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,6 +13,74 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-   
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <FrameLayout
+                android:id="@+id/start_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    app:onClickCommand="@{viewModel.onBackCommand}"
+                    app:srcCompat="@drawable/ic_back" />
+
+            </FrameLayout>
+
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_toStartOf="@+id/end_layout"
+                android:layout_toEndOf="@+id/start_layout"
+                android:background="@drawable/bg_search"
+                android:hint="请输入搜索关键字"
+                android:imeOptions="actionSearch"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:singleLine="true"
+                android:text="@={viewModel.keyword}"
+                android:textAppearance="?attr/textAppearanceBody2"
+                app:onSearchCommand="@{viewModel.onSearchCommand}" />
+
+            <FrameLayout
+                android:id="@+id/end_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="搜索"
+                    android:textColor="#999999"
+                    android:textSize="14sp"
+                    app:onClickCommand="@{viewModel.onSearchCommand}" />
+
+            </FrameLayout>
+
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            app:itemBinding="@{viewModel.itemBinding}"
+            app:items="@{viewModel.items}" />
+
     </LinearLayout>
 </layout>
