--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -21,7 +21,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:onClickEndCommand="@{viewModel.onClickExit}"
             app:onClickStartCommand="@{viewModel.onBackCommand}"
+            app:toolbarEndIcon="@drawable/ic_cancle"
             app:toolbarStartIcon="@drawable/ic_back"
             app:toolbarTitle="@{viewModel.title}"
             app:toolbarTitleTextAppearance="?attr/textAppearanceHeadline6" />
