--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -28,10 +28,24 @@
             app:toolbarTitle="@{viewModel.title}"
             app:toolbarTitleTextAppearance="?attr/textAppearanceHeadline6" />
 
-        <WebView
-            android:id="@+id/webview"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+
+
+            <WebView
+                android:id="@+id/webview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="@{viewModel.alpha}"
+                android:background="#000000" />
+
+        </FrameLayout>
+
     </LinearLayout>
 </layout>
