--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.zhuzichu.android.wan.ui.search.viewmodel.ViewModelSearch" />
+            type="com.zhuzichu.android.wan.ui.search.main.viewmodel.ViewModelSearch" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
