--- a/shared/src/main/res/values-night/colors.xml
+++ b/shared/src/main/res/values-night/colors.xml
@@ -10,11 +10,17 @@
     <color name="color_surface">#121212</color>
     <color name="color_error">#cf6679</color>
 
+    <color name="color_background_primary">#121212</color>
+
     <color name="color_on_primary">#000000</color>
     <color name="color_on_secondary">#000000</color>
     <color name="color_on_background">#ffffff</color>
     <color name="color_on_surface">#ffffff</color>
     <color name="color_on_error">#000000</color>
+
+    <color name="color_font_primary">#DDDDDD</color>
+    <color name="color_font_secondary">#999999</color>
+    <color name="color_font_tertiary">#666666</color>
 
     <color name="color_divider">#333333</color>
 
