--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -10,12 +10,18 @@
     <color name="color_surface">#ffffff</color>
     <color name="color_error">#b00020</color>
 
+    <color name="color_background_primary">#eaeaea</color>
+
     <color name="color_on_primary">#ffffff</color>
     <color name="color_on_secondary">#000000</color>
     <color name="color_on_background">#000000</color>
     <color name="color_on_surface">#000000</color>
     <color name="color_on_error">#ffffff</color>
 
-    <color name="color_divider">#efefef</color>
+    <color name="color_font_primary">#333333</color>
+    <color name="color_font_secondary">#666666</color>
+    <color name="color_font_tertiary">#999999</color>
+
+    <color name="color_divider">#e5e5e5</color>
 
 </resources>
