--- a/app/src/main/res/layout/item_category_end.xml
+++ b/app/src/main/res/layout/item_category_end.xml
@@ -13,6 +13,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:background="@color/color_background"
+        android:foreground="@drawable/ripple_light_with_border"
         app:onClickCommand="@{item.onClickItem}">
 
         <androidx.appcompat.widget.AppCompatTextView
