--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -48,10 +48,9 @@
                     android:layout_height="match_parent"
                     android:layout_weight="2.5"
                     android:orientation="vertical"
-                    app:diffConfig="@{viewModel.diffStart}"
                     app:itemBinding="@{viewModel.itemBindingStart}"
                     app:items="@{viewModel.itemsStart}"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    app:layoutManager="com.zhuzichu.android.shared.widget.recycler.CenterLayoutManager" />
 
                 <View
                     android:layout_width="1dp"
@@ -63,11 +62,12 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="7.5"
+                    android:background="@color/color_background_primary"
                     android:orientation="vertical"
                     app:itemBinding="@{viewModel.itemBindingEnd}"
                     app:items="@{viewModel.itemsEnd}"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:lineManager="@{viewModel.both(5)}"
+                    app:lineManager="@{viewModel.gridSpacing(3)}"
                     app:spanCount="3" />
 
             </LinearLayout>
