--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.zhuzichu.android.wan.ui.category.viewmodel.ViewModelCategory" />
+            type="com.zhuzichu.android.wan.ui.category.main.viewmodel.ViewModelCategory" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
