--- a/app/src/main/res/layout/item_category_start.xml
+++ b/app/src/main/res/layout/item_category_start.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="item"
-            type="com.zhuzichu.android.wan.ui.category.viewmodel.ItemViewModelCategoryStart" />
+            type="com.zhuzichu.android.wan.ui.category.main.viewmodel.ItemViewModelCategoryStart" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
