--- a/shared/src/main/res/layout/activity_default_error.xml
+++ b/shared/src/main/res/layout/activity_default_error.xml
@@ -15,10 +15,10 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:paddingBottom="@dimen/activity_vertical_margin">
 
             <ImageView
                 android:id="@+id/error_activity_image"
@@ -49,6 +49,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/error_activity_error_details"
+                android:textColor="?colorPrimary" />
+
+            <Button
+                android:id="@+id/error_activity_file_button"
+                style="?borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/error_activity_error_file"
                 android:textColor="?colorPrimary" />
         </LinearLayout>
     </ScrollView>
